--- a/InplayBet.Web/Views/Bet/ShowReportWindow.cshtml
+++ b/InplayBet.Web/Views/Bet/ShowReportWindow.cshtml
@@ -8,6 +8,9 @@
     }, new { id = "frmSubmitReport" }))
 {
     <div class="report-container">
+        <div class="report-title">
+            Report Cheating
+        </div>
         <ul>
             <li>
                 <span>Reported :</span>
