--- a/InplayBet.Web/Views/Shared/_SimpleMessage.cshtml
+++ b/InplayBet.Web/Views/Shared/_SimpleMessage.cshtml
@@ -1,6 +1,6 @@
-﻿<div class="popup-container" style="display:none">
+﻿@*<div class="popup-container" style="display:none">
     <div class="popup-title"></div>
     <div class="popup-body"></div>
     <div class="popup-action">
     </div>
-</div>
+</div>*@
