--- a/InplayBet.Web/Styles/style.css
+++ b/InplayBet.Web/Styles/style.css
@@ -427,11 +427,18 @@ ul.challenger-popup li p a {color:#6a6a6a; text-decoration:none;}
 ul.challenger-popup li p a:hover {color:#63b222; text-decoration:none;}
 ul.challenger-popup li.last {border-bottom:0; margin-bottom:0;}
 
+.report-container{width:92%; padding: 2%;}
+.report-container .report-title{  width: 100%;float: left;padding-bottom: 2%;font-size: 19px; font-weight: bold;}
+.report-container ul{width:100%; float:left;}
+.report-container ul li{width:100%;  padding: 2% 0;}
+.report-container ul li span{  width: 100%; margin: 3% 0; font-size: 17px; float: left;}
+.report-container ul li div{width:100%;}
+.report-container ul li div select{width:100%;padding: 2%; font-size: 16px;}
+.report-container ul li div textarea{width:100%;padding: 2%; font-size: 16px;}
+.report-container ul li input[type=submit]{  width: auto; padding: 7px 10px; font-size: 15px; background: #63b222; color: #fff; border: 0; margin-right: 0; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; transition: all 0.4s ease; display: inline-block; text-transform: uppercase; cursor: pointer;}
 
-
-
-
-
+.edit-link {float:left; width:32px; height:32px; display:block; background:url(/Styles/images/Edit.png) no-repeat;}
+.reset-link {float:left; width:32px; height:32px; display:block; background:url(/Styles/images/Reset.png) no-repeat;}
 
 /*------------------------- Responsive CSS -------------------------*/
 
