--- a/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
@@ -46,7 +46,7 @@
             <td>
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td bgcolor="ebebeb" colspan="2" style="font-size:30px; font-weight:bold; color:#000; padding:5px; font-family:Arial, Helvetica, sans-serif; border:0;">Bet 1</td>
+                        <td bgcolor="ebebeb" colspan="2" style="font-size:30px; font-weight:bold; color:#000; padding:5px; font-family:Arial, Helvetica, sans-serif; border:0;">Bet @Model.Bet.BetNumber</td>
                     </tr>
                     <tr>
                         <td>&nbsp;</td>
