--- a/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
@@ -1,6 +1,7 @@
 ﻿@using InplayBet.Web.Models
 @using System.Globalization
 @model BetNotificationViewModel
+@{Layout = null;}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,10 +9,14 @@
     <title>Home</title>
 </head>
 
-<body style="margin:0; padding:0;">
+<body style="margin: 0; padding: 0;">
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-            <td style="background:#010205; padding:10px;"><a href="#"><img src="http://79.170.44.202/inplay20.co.uk/Styles/images/logo.png" width="237" height="66" alt="" border="0" /></a></td>
+            <td style="background: #010205; padding: 10px;">
+                <a href="#">
+                    <img src="http://79.170.44.202/inplay20.co.uk/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
+                </a>
+            </td>
         </tr>
         <tr>
             <td>&nbsp;</td>
@@ -20,20 +25,24 @@
             <td>
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td bgcolor="ebebeb" colspan="2" style="font-size:30px; font-weight:bold; color:#000; padding:5px; font-family:Arial, Helvetica, sans-serif; border:0;">Member Details</td>
+                        <td bgcolor="ebebeb" colspan="2" style="font-size: 30px; font-weight: bold; color: #000; padding: 5px; font-family: Arial, Helvetica, sans-serif; border: 0;">Member Details</td>
                     </tr>
                     <tr>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td style="width:15%"><a href="#"><img src="http://79.170.44.202/inplay20.co.uk/Images/Users/Default.jpg" width="165" height="170" alt="" border="0" /></a></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">
+                        <td style="width: 15%">
+                            <a href="#">
+                                <img src="http://79.170.44.202/inplay20.co.uk/Images/Users/Default.jpg" width="165" height="170" alt="" border="0" />
+                            </a>
+                        </td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">
                             <h4>Name: @Model.User.UserId</h4>
-                            <p>Member Since: @Model.User.MemberSince.ToString("d",new CultureInfo(Model.User.CultureCode)) </p>
+                            <p>Member Since: @Model.User.MemberSince.ToString("d", new CultureInfo(Model.User.CultureCode)) </p>
                             <p>Ranking: @Model.User.Rank</p>
                             <p>Bookmarker - @Model.User.BookMakerName</p>
-                            <p>Consecutive Bet Wins: @ViewBag.ConsicutiveWonBets</p>
+                            <p>Consecutive Bet Wins: @TempData["ConsicutiveWonBets"]</p>
                         </td>
                     </tr>
                 </table>
@@ -46,15 +55,15 @@
             <td>
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td bgcolor="ebebeb" colspan="2" style="font-size:30px; font-weight:bold; color:#000; padding:5px; font-family:Arial, Helvetica, sans-serif; border:0;">Bet @Model.Bet.BetNumber</td>
+                        <td bgcolor="ebebeb" colspan="2" style="font-size: 30px; font-weight: bold; color: #000; padding: 5px; font-family: Arial, Helvetica, sans-serif; border: 0;">Bet @Model.Bet.BetNumber</td>
                     </tr>
                     <tr>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;" width="20%"><strong>Team Names:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;" width="20%"><strong>Team Names:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">
                             <label></label>
                             @Model.Bet.TeamA.TeamName
                             <strong>vs</strong>
@@ -62,32 +71,32 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>League:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.Legue.LegueName</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>League:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.Legue.LegueName</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Bet Type:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.BetType</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Bet Type:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetType</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Odds:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.Odds</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Odds:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.Odds</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Amount Placed:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.BetPlaced</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Amount Placed:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetPlaced</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Winning Total:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.WiningTotal</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Winning Total:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.WiningTotal</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Bet Submited On:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.CreatedOn("d", new CultureInfo(Model.User.CultureCode))</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Bet Submited On:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.CreatedOn("d", new CultureInfo(Model.User.CultureCode))</td>
                     </tr>
                     <tr>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;"><strong>Status:</strong></td>
-                        <td style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#000; padding:5px;">@Model.Bet.BetStatus</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Status:</strong></td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetStatus</td>
                     </tr>
                 </table>
             </td>
