--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -28,11 +28,9 @@
                     {
                         <p class="bookmarker">
                             <a href='@Url.Action("Update", "RegisterUser", new { userKey = Model.UserKey })'
-                               class="edit-link" title="Edit Account"></a>
+                               class="edit-link" title="Edit Account">Edit Profile</a>
                             <a href="javascript:ResetUserAccount('@((Url.Action("ResetAccount","MemberProfile",new{area="", userKey = Model.UserKey})).ToBase64Encode())')"
-                               class="reset-link" title="Reset Account"></a>
-                            @*<a href='@Url.Action("ResetAccount", "MemberProfile", new { userKey = Model.UserKey })'
-                               class="reset-link" title="Reset Account"></a>*@
+                               class="reset-link" title="Reset Account">Reset Challenges</a>
                         </p>
                     }
 
