--- a/InplayBet.Web/Views/Shared/_PopupBet.cshtml
+++ b/InplayBet.Web/Views/Shared/_PopupBet.cshtml
@@ -1,6 +1,7 @@
 ﻿@using InplayBet.Web.Models
 @model BetModel
-@using (Ajax.BeginForm("InsertNewBet", "Bet", new AjaxOptions { HttpMethod = "POST" }, new { id = "frmBet" }))
+@using (Ajax.BeginForm("InsertNewBet", "Bet", new { area = "" },
+    new AjaxOptions { HttpMethod = "POST" }, new { id = "frmBet" }))
 {
     <div class="popup-border">
         <h2>Bet Challenge form</h2>
@@ -39,10 +40,10 @@
                 @Html.TextBoxFor(m => m.WiningTotal, new { @class = "full" })
             </li>
             @*<li>
-                <label>Winning Total:</label>
-                <input name="" type="radio" value="" />Won
-                <input name="" type="radio" value="" />Lost
-            </li>*@
+                    <label>Winning Total:</label>
+                    <input name="" type="radio" value="" />Won
+                    <input name="" type="radio" value="" />Lost
+                </li>*@
             <li>
                 <input type="submit" value="submit" name="">
             </li>
