--- a/InplayBet.Web/Views/LatestWinners/_LatestWonChallenges.cshtml
+++ b/InplayBet.Web/Views/LatestWinners/_LatestWonChallenges.cshtml
@@ -9,7 +9,7 @@
 <div class="green-box">
     <div class="blk-bg">
         <h3 class="blk-heading2">Challenge @Model.ChallengeNumber. - Won</h3>
-        <a href="#" class="report-btn">report</a>
+        <a href="javascript:ShowReportWindow(@Model.UserKey, @Model.ChallengeId, '@Model.ChallengeStatus')" class="report-btn">report</a>
     </div>
     <div class="scroll">
         <div class="outer">
